FIX: 添加用户管理相关接口
